--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New Project</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <title>Frontend Mentor | Four card feature section</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="index.js"></script>
   </body>
 </html>
+<body>
+  
